--- a/doc/sbc-template.bib
+++ b/doc/sbc-template.bib
@@ -26,6 +26,31 @@
   year    = {2024},
   doi     = {10.1016/j.jretconser.2024.103865},
   url     = {https://www.sciencedirect.com/science/article/pii/S0969698924001619}
-
 }
+
+@INPROCEEDINGS{10147542,
+  author={Wangkiat, Pongthanin and Polprasert, Chantri},
+  booktitle={2023 8th International Conference on Business and Industrial Research (ICBIR)}, 
+  title={Machine Learning Approach to Predict E-commerce Customer Satisfaction Score}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1176-1181},
+  keywords={Radio frequency;Customer satisfaction;Companies;Predictive models;Electronic commerce;Random forests;Business;customer satisfaction;e-commerce;classification;machine learning;rating prediction},
+  doi={10.1109/ICBIR57571.2023.10147542}}
+
+
+
+@misc{dellaJustina2023,
+  author       = {Hellen Mathei Della-Justina},
+  title        = {Avaliação de técnicas de classificação para dados desbalanceados},
+  year         = {2023},
+  institution  = {Universidade Federal do Paraná},
+  type         = {Monografia (Especialização)},
+  school       = {Programa de Especialização em Data Science e Big Data},
+  address      = {Curitiba, PR, Brasil},
+  url          = {https://hdl.handle.net/1884/85885},
+  note         = {Orientador: Prof. Dr. Luiz Eduardo Soares de Oliveira}
+}
+
 
